# fuzz-utils

./: .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: black.yml  mypy.yml  publish.yml  pylint.yml  pytest.yml
fuzz_utils/: main.py
fuzz_utils/converters/: EchidnaConverter.py
fuzz_utils/fuzzers/: Echidna.py  Medusa.py
fuzz_utils/generate/: FoundryTest.py
fuzz_utils/modify_corpus/: CorpusModifier.py  utils.py
fuzz_utils/parsing/: parser.py  parser_util.py
fuzz_utils/parsing/commands/: init.py  (+5 more)
fuzz_utils/template/: HarnessGenerator.py
fuzz_utils/templates/: HarnessGenerator.py  default_config.py  foundry_templates.py  harness_templates.py
fuzz_utils/utils/: crytic_print.py  encoding.py  error_handler.py  file_manager.py  remappings.py  slither_utils.py
test/src/: BasicTypes.sol  DynamicArrays.sol  FixedArrays.sol  MultiDimensionalDynamicArrays.sol  MultiDimensionalFixedArrays.sol  TimeAdvancement.sol  TupleTypes.sol
test/test/: BasicTypes_Echidna_Test.t.sol  BasicTypes_Medusa_Test.t.sol
test_generator/: main.py
test_generator/fuzzers/: Echidna.py  Medusa.py
test_generator/templates/: foundry_templates.py
test_generator/utils/: encoding.py  error_handler.py
tests/: conftest.py  modifier_expected_results.py  test_corpus_modifier.py  test_harness.py  test_remapping_detection.py  test_types_echidna.py  test_types_medusa.py
tests/test_data/: foundry.toml  remappings.txt  template.json
(+467 files in other folders)
